# x

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo.cpp  x.h  x.hpp
test/: test_basic.cpp  test_filesystem.cpp  test_format.cpp  test_result.cpp  test_string_ops.cpp  test_struct.cpp  test_system.cpp  test_time.cpp  test_timer.cpp  test_utilities.cpp
